Fix the brand size in navbar + align items in footer

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,12 +2,11 @@
   background-color: #000;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
   color: white;
   padding: 30px 0;
   text-align: center;
   margin-top: 50px;
-
 }
 
 .footer-logo img {
